--- a/_includes/bars/side.html
+++ b/_includes/bars/side.html
@@ -17,7 +17,7 @@
 {% endif %}
 
 {% if page.path contains '_projects' %}
-    {% include components/project-meta.html %}
+    {% include components/projects-meta.html %}
 {% endif %}
 
 {% if page.path contains '_posts' %}
