--- a/_includes/components/portfolio-meta.html
+++ b/_includes/components/portfolio-meta.html
@@ -17,7 +17,7 @@
                 <span class="icon grey mr-1">
                     {% include entypo/arrow-left.svg %}
                 </span>
-                <a href="{{ site.baseurl }}{% link list/portfolio.html %}">Back to portfolio</a>
+                <a href="{{ site.baseurl }}{% link list/portfolio.html %}">Back to Work Experience</a>
             </div>
         </div>
     </div>
